# internal/transport/rest/v1/accounts.go
@@ -12,11 +12,20 @@ func (h *Handler) initAccountsRoutes(v1 *gin.RouterGroup) {
 
 	accounts.POST("/sing-up", h.AccountSingUp)
 	accounts.POST("/sing-in", h.AccountSignIn)
+	accounts.POST("/refresh", h.AccountRefresh)
 
 	authenticated := accounts.Group("/", h.AccountIdentity)
+
 	{
-		authenticated.PUT("/", h.AccountUpdate)
+		authenticated.PUT("", h.AccountUpdate)
 		authenticated.GET("/me", h.AccountGetMe)
+
+		wallets := authenticated.Group("/wallets")
+		{
+			wallets.GET("/balance", h.AccountGetWallet)
+			wallets.POST("/top-up", h.AccountWalletTopUp)
+			wallets.POST("/transfer-by-phone", h.AccountFundTransfer)
+		}
 	}
 }
 
@@ -59,7 +68,7 @@ func (h *Handler) AccountSingUp(c *gin.Context) {
 //	@Accept			json
 //	@Produce		json
 //	@Param			data	body		models.SingInAccountInput	true	"data body"
-//	@Success		201		{object}	models.Tokens
+//	@Success		200		{object}	models.Tokens
 //	@Failure		400,409	{object}	Response
 //	@Failure		500		{object}	Response
 //	@Router			/api/v1/accounts/sing-in [POST]
@@ -81,10 +90,14 @@ func (h *Handler) AccountSignIn(c *gin.Context) {
 		return
 	}
 
-	c.SetCookie("access_token", tokens.AccessToken, 120*60, "/", h.cfg.HTTP.Host, false, true)
-	c.SetCookie("refresh_token", tokens.RefreshToken, int(h.cfg.AUTH.RefreshTokenTTL.Minutes())*60, "/", h.cfg.HTTP.Host, false, true)
+	c.SetCookie("access_token", tokens.AccessToken, int(h.cfg.AUTH.AccessTokenTTL.Seconds()), "/", h.cfg.HTTP.Host, false, true)
+	c.SetCookie("refresh_token", tokens.RefreshToken, int(h.cfg.AUTH.RefreshTokenTTL.Seconds()), "/", h.cfg.HTTP.Host, false, true)
 
-	c.JSON(http.StatusCreated, models.Tokens{AccessToken: tokens.AccessToken})
+	c.JSON(http.StatusOK, models.Tokens{AccessToken: tokens.AccessToken})
+}
+
+func (h *Handler) AccountRefresh(c *gin.Context) {
+
 }
 
 // AccountUpdate
@@ -146,4 +159,116 @@ func (h *Handler) AccountGetMe(c *gin.Context) {
 	}
 
 	c.JSON(http.StatusOK, currentAccount)
+}
+
+// AccountGetWallet
+//	@Summary		Get wallet by accountId.
+//	@Description	This API to get wallet by accountId.
+//	@Tags			Wallets
+//	@Accept			json
+//	@Produce		json
+//	@Success		200		{object}	models.WalletOut
+//	@Failure		400,404	{object}	Response
+//	@Failure		500		{object}	Response
+//	@Router			/api/v1/accounts/wallets/balance [GET]
+func (h *Handler) AccountGetWallet(c *gin.Context) {
+	currentAccount, err := h.GetAccountFromCtx(c)
+	if err != nil {
+		newResponse(c, http.StatusInternalServerError, err.Error())
+		logger.Zap.Error("error while get account from ctx", logger.Error(err))
+		return
+	}
+
+	wallet, err := h.services.Wallets.GetByAccountID(c.Request.Context(), currentAccount.ID)
+	if err != nil {
+		newResponse(c, http.StatusInternalServerError, err.Error())
+		logger.Zap.Error("error while get wallet by account id", logger.Error(err))
+		return
+	}
+
+	c.JSON(http.StatusOK, wallet)
+}
+
+// AccountWalletTopUp
+//	@Summary		Top up wallet balance.
+//	@Description	This API to top up wallet balance.
+//	@Tags			Wallets
+//	@Accept			json
+//	@Produce		json
+//	@Param			data	body		models.TopUpInput	true	"data body"
+//	@Success		200		{object}	models.TransactionOut
+//	@Failure		400,404	{object}	Response
+//	@Failure		500		{object}	Response
+//	@Router			/api/v1/accounts/wallets/top-up [POST]
+func (h *Handler) AccountWalletTopUp(c *gin.Context) {
+	var body models.TopUpInput
+
+	currentAccount, err := h.GetAccountFromCtx(c)
+	if err != nil {
+		newResponse(c, http.StatusInternalServerError, err.Error())
+		logger.Zap.Error("error while get account from ctx", logger.Error(err))
+		return
+	}
+
+	err = c.ShouldBind(&body)
+	if err != nil {
+		newResponse(c, http.StatusBadRequest, models.ErrInputBody.Error())
+		logger.Zap.Error("error while bind to json AccountWalletTopUp", logger.Error(err))
+		return
+	}
+
+	body.AccountID = currentAccount.ID
+
+	body.AccountPinCode = currentAccount.PinCode
+
+	transaction, err := h.services.Transactions.TopUp(c.Request.Context(), body)
+	if err != nil {
+		newResponse(c, http.StatusInternalServerError, err.Error())
+		logger.Zap.Error("error while update account", logger.Error(err))
+		return
+	}
+
+	c.JSON(http.StatusOK, transaction)
+}
+
+// AccountFundTransfer
+//	@Summary		Top up transfer funds to account balance ny phone number.
+//	@Description	This API to top up wallet balance.
+//	@Tags			Wallets
+//	@Accept			json
+//	@Produce		json
+//	@Param			data	body		models.TransferByPhoneNumberInput	true	"data body"
+//	@Success		200		{object}	models.TransactionOut
+//	@Failure		400,404	{object}	Response
+//	@Failure		500		{object}	Response
+//	@Router			/api/v1/accounts/wallets/transfer-by-phone [POST]
+func (h *Handler) AccountFundTransfer(c *gin.Context) {
+	var body models.TransferByPhoneNumberInput
+
+	currentAccount, err := h.GetAccountFromCtx(c)
+	if err != nil {
+		newResponse(c, http.StatusInternalServerError, err.Error())
+		logger.Zap.Error("error while get account from ctx", logger.Error(err))
+		return
+	}
+
+	err = c.ShouldBind(&body)
+	if err != nil {
+		newResponse(c, http.StatusBadRequest, models.ErrInputBody.Error())
+		logger.Zap.Error("error while bind to json AccountWalletTopUp", logger.Error(err))
+		return
+	}
+
+	body.AccountID = currentAccount.ID
+
+	body.AccountPinCode = currentAccount.PinCode
+
+	transaction, err := h.services.Transactions.TransferByPhoneNumber(c.Request.Context(), body)
+	if err != nil {
+		newResponse(c, http.StatusInternalServerError, err.Error())
+		logger.Zap.Error("error while update account", logger.Error(err))
+		return
+	}
+
+	c.JSON(http.StatusOK, transaction)
 }
